# OS

./: .gitignore  CMakeLists.txt  console.cpp  console.h  directory.cpp  directory.h  fileSystem.cpp  fileSystem.h  gcm.cpp  gcm.h  inode.cpp  inode.h  main.cpp  man.cpp  man.h  memory.cpp  memory.h  ram.cpp  ram.h  settings.h  test.cpp  user.cpp  user.h  window.h
debug/: log.txt  message.txt
img/: iNodeList.txt  users.txt
